CHATS_SIT/force-app/main/default/objects/T_INDIV_EDUC__c.object
<CustomObject>
    <description>Individual Education information</description>
    <!--<enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
 <fullName>CDE_SOURCE_VRFD_EDUC__c</fullName>
    <description>How Verified</description>
    <label>How Verified</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CDE_TYPE_SCHOOL__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>R00705</valueSetName>
    </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_SCHOOL__c</fullName>
        <label>Training or Education Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00704</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_INFO_EDUC__c</fullName>
        <label>Temporary Break Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00854_BreakType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV_INFO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Temporary Break Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV_INFO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Temporary Break Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <description>Verified</description>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>Effective Begin Date</description>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_ANT__c</fullName>
        <description>Anticipated Completion Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Anticipated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Effective End Date</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client ID</description>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Teen Parent Education</relationshipLabel>
        <relationshipName>T_SBSD_INDIV7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ignore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAM_SCHOOL__c</fullName>
        <description>School Name</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Training Institution/Treatment Facility</label>
        <length>71</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensed_by_BHA__c</fullName>
        <label>Licensed by BHA </label>
        <inlineHelpText>The Colorado Behavioral Health Administration (BHA) licenses substance use disorder treatment programs in Colorado. Please refer to State CCCAP guidance for instructions on confirming license status.</inlineHelpText>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <label>Yes</label>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <label>No</label>
                    <fullName>N</fullName>
                </value>               
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_1__c</fullName>
        <description>Address Line 1</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
            <fullName>ADR_LINE_2__c</fullName>
            <description>Address Line 2</description>
            <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
            <label>Address Line 2</label>
            <length>35</length>
            <type>Text</type>
    </fields>
    <fields>
            <fullName>ADR_STATE__c</fullName>
            <label>State of Facility</label>
            <type>Picklist</type>
            <valueSet>
                <restricted>true</restricted>
                <valueSetName>R00002</valueSetName>
            </valueSet>
    </fields>
    <fields>
            <fullName>ADR_ZIP_EXTN__c</fullName>
            <description>Zip Ext.</description>
            <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
            <label>Zip Ext</label>
            <length>4</length>
            <type>Text</type>
    </fields>
    <fields>
            <fullName>ADR_ZIP_MAIN__c</fullName>
            <description>Zip</description>
            <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
            <label>Zip</label>
            <length>5</length>
            <type>Text</type>
    </fields>
    <fields>
        <fullName>HOURS_SUD__c</fullName>
        <label>Hours Per Week of Substance Use Disorder</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Treatment_Types__c</fullName>
        <label>Treatment Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <label>Structured outpatient</label>
                    <fullName>SO</fullName>
                </value>
                <value>
                    <label>Residential</label>
                    <fullName>Res</fullName>
                </value>
                <value>
                    <label>Highly structured residential</label>
                    <fullName>HSR</fullName>
                </value>
                <value>
                    <label>Highly structured residential services with medical staff onsite</label>
                    <fullName>HSRMED</fullName>
                </value>               
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Teen Parent Education</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Training or Education ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teen Parent Education</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Begin_Date_Prior_To_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp; DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date must be later than Effective Begin Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_HowVerified_If_VerifType_Writtn</fullName>
        <active>true</active>
        <description>Require How Verified field for Verified Type is &quot;Written Verification&quot;</description>
        <errorConditionFormula>AND(AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_CLIENT__r.Is_CBMS_Data__c)), ISPICKVAL(CDE_TYPE_VERIF__c, &quot;V&quot;) , 
    ISBLANK(TEXT(CDE_SOURCE_VRFD_EDUC__c) ) 
)</errorConditionFormula>
        <errorDisplayField>CDE_SOURCE_VRFD_EDUC__c</errorDisplayField>
        <errorMessage>Require How Verified field for Verified Type is &quot;Written Verification&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warning_Message_before_saving_the_record</fullName>
        <active>true</active>
        <description>This record may not be appropriate for this individual based on their age and/or relationship to the primary caretaker of this case</description>
        <errorConditionFormula>AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_CLIENT__r.Is_CBMS_Data__c), NOT(IDN_CLIENT__r.Is_Primary_Parent_Caretaker__c),IDN_CLIENT__r.Age__c &lt; VALUE( $Label.Teen_Parent_Age_Limit ),NOT(IDN_CLIENT__r.Has_Allowed_Relationship__c),NOT(Ignore__c))</errorConditionFormula>
        <errorMessage>This record may not be appropriate for this individual based on their age and/or relationship to the primary caretaker of this case(to continue saving please tick Ignore checkbox)</errorMessage>
    </validationRules>
    <validationRules>
    	<fullName>BeginDateWithin31DaysFuture</fullName>
   	    <active>true</active>
    	<description>Begin Date cannot be more than 31 days in the future</description>
    	<errorConditionFormula>DTE_BEGIN_EFFV__c &gt;  TODAY() +31</errorConditionFormula>
    	<errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
    	<errorMessage>Begin Date cannot be more than 31 days in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AntCompDateGreaterThanBeginDate</fullName>
        <active>true</active>
        <description>Anticipated completion date must be greater than effective begin date.</description>
        <errorConditionFormula>DTE_BEGIN_EFFV__c &gt;= DTE_END_ANT__c</errorConditionFormula>
        <errorDisplayField>DTE_END_ANT__c</errorDisplayField>
        <errorMessage>Anticipated Completion Date must be greater than Effective Begin Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AntCompDateNotInPast</fullName>
        <active>true</active>
        <description>Anticipated completion date cannot be in the past.</description>
        <errorConditionFormula>DTE_END_ANT__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>DTE_END_ANT__c</errorDisplayField>
        <errorMessage>Anticipated Completion Date cannot be in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hours_validation</fullName>
        <active>true</active>
        <errorConditionFormula>HOURS_SUD__c  &gt; 168</errorConditionFormula>
        <errorDisplayField>HOURS_SUD__c</errorDisplayField>
        <errorMessage>Enter the number of hours, up to 168</errorMessage>
    </validationRules>
</CustomObject>