CHATS_SIT/force-app/main/default/objects/T_INDIV_EDUC__c/validationRules/Begin_Date_Prior_To_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Begin_Date_Prior_To_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp; DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c</errorConditionFormula>
    <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
    <errorMessage>Effective End Date must be later than Effective Begin Date.</errorMessage>
</ValidationRule>