CHATS_SIT/force-app/main/default/objects/T_INDIV_EDUC__c/validationRules/Req_HowVerified_If_VerifType_Writtn.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_HowVerified_If_VerifType_Writtn</fullName>
    <active>true</active>
    <description>Require How Verified field for Verified Type is &quot;Written Verification&quot;</description>
    <errorConditionFormula>AND(AND(NOT(IDN_CLIENT__r.Is_Peak_Data__c),NOT(IDN_CLIENT__r.Is_CBMS_Data__c)), ISPICKVAL(CDE_TYPE_VERIF__c, &quot;V&quot;) , 
    ISBLANK(TEXT(CDE_SOURCE_VRFD_EDUC__c) ) 
)</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_VRFD_EDUC__c</errorDisplayField>
    <errorMessage>Require How Verified field for Verified Type is &quot;Written Verification&quot;</errorMessage>
</ValidationRule>