CHATS_SIT/force-app/main/default/objects/T_INDIV_EDUC__c/listViews/TeenParentEducation_TempBreak.listView-meta.xml
<ListView>
    <fullName>TeenParentEducation_TempBreak</fullName>
    <columns>NAME</columns>
    <columns>IDN_CLIENT__c</columns>
    <columns>CDE_TYPE_INFO_EDUC__c</columns>
    <columns>DTE_BEGIN_EFFV_INFO__c</columns>
    <columns>DTE_END_EFFV_INFO__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_TYPE_INFO_EDUC__c</field>
        <operation>equals</operation>
        <value>ESB,MPL,ML</value>
    </filters>
    <label>TeenParentEducation_TempBreak</label>
</ListView>